--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -11,8 +11,10 @@
     frontend front
         mode http
         bind *:80
+{% if target.ssl %}
         bind *:443 ssl crt {{ haproxy_cert_dir }}/{{ target.fqdn }}.pem alpn h2,http/1.1
         http-request redirect scheme https code 301 unless { ssl_fc }
+{% endif%}
         default_backend servers
 
     backend servers
