--- a/roles/haproxy/templates/haproxy.cfg.j2
+++ b/roles/haproxy/templates/haproxy.cfg.j2
@@ -9,8 +9,8 @@
         timeout server 50000ms
 
     frontend front
-        mode http
-        bind *:80
+        mode {{ target.mode }}
+        bind *:{{ target.port }}
 {% if target.ssl %}
         bind *:443 ssl crt {{ haproxy_cert_dir }}/{{ target.fqdn }}.pem alpn h2,http/1.1
         http-request redirect scheme https code 301 unless { ssl_fc }
@@ -18,6 +18,7 @@
         default_backend servers
 
     backend servers
+        mode {{ target.backend.mode }}
         balance roundrobin
 {% for server in target.backend_servers %}
         server {{ server.hostname }} {{ server.ip }}:{{ server.port }} check {% if server.ssl %}ssl verify none{% endif %}
